# PacketReporterPro

./: .gitignore  CHANGELOG.md  LICENSE  README.md
installers/linux/: install.sh
installers/macos/: install.sh
installers/windows/: install.bat  install.ps1  requirements.md
sample-data/: packet_reporter.txt
src/: CMakeLists.txt  config_reader.c  config_reader.h  packet_collector.c  packet_collector.h  pdf_export.c  pdf_export.h  pro_window.cpp  pro_window.h  report_renderer.c  report_renderer.h  reporter_plugin.c  reporter_plugin.h  ui_bridge.cpp  ui_bridge.h  wifi_collector.c  wifi_collector.h
